// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buildMcpConfig > serializes to stable JSON (snapshot) 1`] = `
"{
  "mcpServers": {
    "playwright": {
      "command": "npx",
      "args": [
        "-y",
        "@playwright/mcp@latest",
        "--headless"
      ],
      "env": {
        "CREW_APP_URL": "http://localhost:5173"
      }
    }
  }
}"
`;

exports[`buildMcpConfig > serializes with chromiumPath to stable JSON (snapshot) 1`] = `
"{
  "mcpServers": {
    "playwright": {
      "command": "npx",
      "args": [
        "-y",
        "@playwright/mcp@latest",
        "--headless",
        "--executable-path",
        "/home/me/.cache/ms-playwright/chromium-1217/chrome-linux64/chrome"
      ],
      "env": {
        "CREW_APP_URL": "http://localhost:5173"
      }
    }
  }
}"
`;
